--- a/BabyFunTIme/BabyFunTime/BabyFunTime.csproj
+++ b/BabyFunTIme/BabyFunTime/BabyFunTime.csproj
@@ -74,5 +74,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="media\background.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
