Added panel and implemented clear controls functionality. Planning to move Draw strings and symbols to another method.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs
 /BabyFunTIme/BabyFunTime/bin/Debug
 /BabyFunTIme/BabyFunTime/obj/Debug
+/BabyFunTIme/BabyFunTime/bin/BabyFunTIme-Beta1.0/media
