Added media files and added app icon. Core logic changes

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /BabyFunTIme/BabyFunTime/bin/Debug
 /BabyFunTIme/BabyFunTime/obj/Debug
 /BabyFunTIme/BabyFunTime/bin/BabyFunTIme-Beta1.0/media
+/BabyFunTIme/.vs/BabyFunTime/v16/.suo
