--- a/BabyFunTIme/BabyFunTime/BabyFunTime.csproj
+++ b/BabyFunTIme/BabyFunTime/BabyFunTime.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>BabyFunTime_new.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -63,6 +66,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,10 +79,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BabyFunTime.ico" />
+    <Content Include="BabyFunTime_new.ico" />
     <Content Include="media\background.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="media\Daddy_Pig.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="media\jorge.gif">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="media\jorge.png">
@@ -87,6 +96,13 @@
     <Content Include="media\Mummy_Pig.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="media\music.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="media\walk.jpg" />
+    <None Include="media\peppa.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="media\peppa.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
